Fixed spacing of header

--- a/mediumscreen.css
+++ b/mediumscreen.css
@@ -105,6 +105,7 @@
 .first-line-header {
     display: flex;
     justify-content: space-evenly;
+    gap: 50px;
 }
 
 .search, .notifications {
